# nyc-taxi-pipeline

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: .env.example  Dockerfile  docker-compose.yml
nyc_taxi_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: download_data.sh  monitor.py
sql/postgres/: 00_init.sql  01_dim_date.sql  02_dim_time.sql  03_dim_location.sql  04_dim_vendor.sql  05_dim_ratecode.sql  06_dim_payment_type.sql  07_fact_trips.sql  08_indexes.sql  09_seed_dimensions.sql  10_load_locations.sql  manual_load_locations.sql
src/: __init__.py  cli.py
src/jobs/: __init__.py  bronze_ingestion.py  dimensional_transform.py
src/models/: __init__.py  dimensional.py  schemas.py
src/monitoring/: __init__.py
src/quality/: __init__.py
src/utils/: __init__.py  config.py  database.py  spark_session.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_config.py  test_schemas.py
